--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -126,7 +126,8 @@
 }
 .wiki_container {
     position: fixed;
-    bottom: 6%;
+    bottom: 9%;
+    right: 1%;
 }
 .wiki_button {
     font-size: 34px;
@@ -140,23 +141,76 @@
     color: white;
 }
 .chat_box_container {
-    width: 17%;
+    width: 20%;
     position: fixed;
     right: 5%;
     height: 47%;
-    bottom: 9%;
+    bottom: 16%;
     background-color: #a98fd9;
     border-radius: 8px;
     display: none;
+    border-top-right-radius: 22px;
+    border-top-left-radius: 22px;
+    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 16px;
 }
 .chat_box_container.open{
     display: block;
+}
+.chatbox {
+    height: 86%;
+    background-color: #e2d9f3;
+    padding: 0 6px 14px 6px;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+    margin-bottom: 8px;
+    overflow-y: auto;
+}
+.chatbox li {
+    list-style: none;
+}
+.chatbox span {
+    align-self: flex-end;
+}
+.chatbox .chat {
+    display: flex;
+}
+.chatbox p {
+    margin: 10% 0 0 0;
+    height: 100%;
+    word-wrap: break-word;
+}
+.incoming p {
+    width: 76%;
+    background-color: #c1b4da;
+    padding: 6px 12px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.incoming i {
+    font-size: 18px;
+    background-color: #a98fd9;
+    padding: 6px;
+    margin: 50% 6px 0 0;
+    border-radius: 4px;
+}
+.outgoing {
+    justify-content: flex-end;
+}
+.outgoing p {
+    width: 75%;
+    background-color: #a98fd9;
+    padding: 6px 12px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .chat_box_body {
     background-color: #e2d9f3;
     width: 100%;
     height: 86%;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
 }
@@ -164,12 +218,13 @@
     display: flex;
 }
 .chat_box_input {
+    height: 34px;
     border-top-right-radius: 16px;
     border-bottom-left-radius: 16px;
     background-color: #e2d9f3;
-    padding: 0 0 0 10px;
+    padding: 6px 0 0 10px;
     border: none;
-    font-size: 14px;
+    font-size: 13px;
     flex: 9;
     margin: 0 0 0 10px;
 }
@@ -177,8 +232,8 @@
     outline:none
 }
 .submit_button {
-    font-size: 24px;
-    padding: 0 7px 0 11px;
+    font-size: 19px;
+    padding: 0 6px 0 7px;
     border-top-right-radius: 14px;
     border-bottom-left-radius: 14px;
     border: none;
