--- a/user/templates/user/set-password.html
+++ b/user/templates/user/set-password.html
@@ -29,6 +29,17 @@
             <div id="error-password-confirm" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
                 {% blocktrans %}パスワードを再入力してください{% endblocktrans %}
             </div>
+            <div class="set_pass">
+                <p style="margin-bottom: 4px 0">パスワードのルール</p>
+                <ul>
+                    <li>8文字以上</li>
+                    <li>1つ以上の文字(a, b, c...)</li>
+                    <li>1つ以上の数字(1, 2, 3...)</li>
+                    <li>大文字と小文字の両方を含めてください</li>
+                    <li>パスワードには簡単に推測できる単語、 語句、パターンは使えません</li>
+                    <li>3つ以上の連続文字("111", 123", "abc", "qwert"など) は使えません</li>
+                </ul>
+            </div>
             <div style="display: flex; justify-content: center; margin-top: 4%;">
                 <button class="category_button hover_color_button" type="button" onclick="validateForm()" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
             </div>
