--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -131,7 +131,7 @@
 }
 .wiki_button {
     font-size: 34px;
-    background-color: #a98fd9;
+    background-color: red;
     padding: 0 10px;
     z-index: 9;
     border-top-right-radius: 16px;
