--- a/static/style.css
+++ b/static/style.css
@@ -221,7 +221,7 @@
 }
 .home_body_container {
     margin-top: 4%;
-    position: relation;
+    position: relative;
     z-index: 0
 }
 .category_followed {
@@ -387,11 +387,11 @@
 }
 /* Comment */
 .comment_body .category_button {
-    margin: 1% 3% 1% 0;
+    margin: 3% 3% 1% 0;
     position: relative;
-    font-size: 24px;
+    font-size: 20px;
     color: #e2d9f3;
-    width: 14%;
+    width: 18%;
 }
 .comment_input {
     width: 100%;
@@ -437,12 +437,12 @@
 /* category page */
 .category_page_name {
     font-size: 50px;
-    center; margin: 40px 0;
+    text-align: center;
+    margin: 40px 0;
     color: #545454;
 }
 /* news page */
 .category_wrap {
-     border-right: solid 1px #545454;
      width: 17%;
      display: flex;
      flex-direction: column;
@@ -462,6 +462,11 @@
     color: #545454;
 }
 /* news_detail */
+.go_back {
+    margin-bottom: 32px;
+    max-width: 140px;
+    margin-left: 40px;
+}
 .news_detail_page {
     display: flex;
     justify-content: center;
@@ -469,18 +474,49 @@
 .news_wrap {
     width: 70%;
 }
+.news_wrap .category_wrap {
+    border-right: solid 1px #545454;
+    overflow: hidden;
+}
 .save ,
 .not_save {
     display: block;
 }
 .more_read_button {
-    width: 20%;
+    width: 24%;
     margin: 0 4%;
+    font-size: 20px;
+}
+.more_read_button a {
+    text-decoration: none;
+    color: #e2d9f3;
 }
 /* Edit profile*/
 .container_profile {
     margin-top: 6%;
     justify-content: center;
+}
+.Edit_profile_header {
+    display: flex;
+}
+.Edit_profile_header p {
+    flex: 7;
+    margin-left: 20%;
+}
+.Edit_go_back_btn {
+    display: flex;
+    flex: 1;
+    background-color: white;
+    color: #a98fd9;
+    border: none;
+    margin: -22px 0 28px 54px;
+}
+.Edit_go_back_btn i{
+    font-size: 34px;
+    padding: 9px 14px;
+}
+.Edit_go_back_btn i:hover{
+    background-color: #e2d9f3;
 }
 /* History and Bookmark */
 .HisBook_container {
@@ -496,12 +532,28 @@
     border-radius: 50%;
     margin: 28px;
 }
+.HisBook_go_back_btn {
+    display: flex;
+    margin-left: 4%;
+    background-color: #a98fd9;
+    color: #e2d9f3;
+    border: none;
+}
+.HisBook_go_back_btn i{
+    font-size: 34px;
+    padding: 8px 14px;
+}
+.HisBook_go_back_btn i:hover{
+    background-color: #e2d9f3;
+    color: #a98fd9;
+}
 .HisBook_edit_btn {
-    margin: 1% 2% 0 0;
+    margin: 4% 2% 0 0;
 }
 .HisBook_edit_btn a {
     color: white;
     padding: 1px 6px 6px 10px;
+    font-size: 36px;
 }
 .HisBook_edit_btn a:hover {
     background-color: #b7a9d0;
@@ -634,7 +686,7 @@
     /* head */
     .container_nav_bar {
         height: 5em;
-        position: relation;
+        position: relative;
     }
     .nav_bar_logo {
         width: 150px;
@@ -790,7 +842,8 @@
         margin: 70px 0 20px 0;
     }
     .more_read_button {
-        width: 32%;
+        width: 40%;
+        margin-left: 16%;
     }
     more_read_button a {
         font-size: 20px;
@@ -798,7 +851,7 @@
     }
     /* comment */
     .comment_body .category_button {
-        width: 26%;
+        width: 40%;
         font-size: 20px;
         margin: 6% 3% 1% 0;
     }
@@ -879,6 +932,7 @@
         font-size: 28px;
         margin-bottom: 26px;
         color: #e2d9f3;
+        padding: 6px 12px;
     }
     .chatbox{
         height: 84%;
