--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -30,7 +30,7 @@
                 <button class="category_button hover_color_button login_button" type="submit">{% blocktrans %}ログイン{% endblocktrans %}</button>
             </div>
             <div style="display: flex; justify-content: center; margin-top: 8%;">
-                <p><a href="{% url 'user:email_confirm' %}">{% blocktrans %}無料会員{% endblocktrans %}</a> / <a href="{% url 'user:forgot_pass' %}">{% blocktrans %}パスワードを忘れた方{% endblocktrans %}</a></p>
+                <p><a href="{% url 'user:email_confirm' %}">{% blocktrans %}初めての方{% endblocktrans %}</a>  /  <a href="{% url 'user:forgot_pass' %}">{% blocktrans %}パスワードを忘れた方{% endblocktrans %}</a></p>
             </div>
         </form>
     </div>
