--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -11,7 +11,7 @@
             <p style="font-size: 40px; margin: 32px 0 0 0; color: white;">{{request.user}}</p>
             <p style="font-size: 22px; font-weight: 700; color: white;">{{ request.user.email }}</p>
         </div>
-        <p class="HisBook_edit_btn">
+        <p class="HisBook_edit_btn" style="font-size: 40px">
             <a href="{% url 'user:edit_profile' %}"><i class="fa-solid fa-pen-to-square"></i></a>
         </p>
         <button class="HisBook_go_back_btn" >
